--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Password</title>
+    <title>Choose Your Password</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>Generate a random password</h1>
+    <h2>Never use an insecure password again.</h2>
+    <section>
+        <button>Generate passwords</button>
+    </section>
+    <section>
+        <!-- Results text boxes here -->
+    </section>
     <script src="index.js"></script>
 </body>
 </html>
