--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>Choose Your Password</title>
 </head>
 <body>
-    <h1>Generate a random password</h1>
+    <h1>Generate a <br><span class="green-text">random password</span> </h1>
     <h2>Never use an insecure password again.</h2>
     <section>
-        <button>Generate passwords</button>
+        <button class="btn">Generate passwords</button>
     </section>
     <section>
-        <!-- Results text boxes here -->
+        <p class="results"></p>
+        <p class="results"></p>
     </section>
     <script src="index.js"></script>
 </body>
