--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
 </head>
 
 <body>
-    <section>
-        <h1>Generate a <br><span class="green-text">random password</span> </h1>
-        <h2>Never use an insecure password again.</h2>
-        <section>
-            <button class="btn">Generate passwords</button>
-        </section>
-        <section>
-            <p class="results"></p>
-            <p class="results"></p>
-        </section>
-    </section>
+    <div>
+        <div id="app-body">
+            <div>
+                <h1>Generate a <br><span class="green-text">random password</span> </h1>
+                <h2>Never use an insecure password again.</h2>
+                <button class="btn">Generate passwords</button>
+                <div>
+                    <p class="results"></p>
+                    <p class="results"></p>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 
