--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <h2>Never use an insecure password again.</h2>
                 <button class="btn">Generate passwords</button>
                 <div id="results-div">
-                    <p class="results-field" id="password1">Answers Here</p>
-                    <p class="results-field" id="password2">Answers Here</p>
+                    <p class="results-field" id="password1-el">Answers Here</p>
+                    <p class="results-field" id="password2-el">Answers Here</p>
                 </div>
             </div>
         </div>
