--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div>
                 <h1>Generate a <br><span class="green-text">random password</span> </h1>
                 <h2>Never use an insecure password again.</h2>
-                <button class="btn">Generate passwords</button>
+                <button class="btn" onclick="getRandomPassword()">Generate passwords</button>
                 <div id="results-div">
                     <p class="results-field" id="password1-el">Answers Here</p>
                     <p class="results-field" id="password2-el">Answers Here</p>
