--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <div>
                 <h1>Generate a <br><span class="green-text">random password</span> </h1>
                 <h2>Never use an insecure password again.</h2>
+                <div class="range-slider">
+                    <p>Password Length:<output id="range-el"></output></p>
+                    <input type="range" min="8" max="50" value="35" id="my-range"/>
+                </div>
                 <button class="btn" onclick="getRandomPassword()">Generate passwords</button>
                 <div id="results-div">
                     <p class="results-field" id="password2-el"></p>
