new checkbox html and css - cursor added to results field for click to copy feature

--- a/index.html
+++ b/index.html
@@ -19,13 +19,8 @@
                     <input type="range" min="8" max="50" value="35" id="my-range"/>
                 </div>
                 <div>
-                    <p>Numbers:</p>
-                    <input type="checkbox" id="numbers-switch" class="checkbox" />
-                    <label for="numbers-switch" class="toggle">
-                        <p class="toggle-text">
-                            OFF     ON
-                        </p>
-                    </label>
+                    <input type="checkbox" id="check-numbers" class="toggle">
+                    <label for="check-numbers">Numbers</label>
                 </div>
                 <button class="btn" onclick="getRandomPassword()">Generate passwords</button>
                 <div id="results-div">
